better flow runner and job filtering
